<resources>
    <string name="app_name">EasyParking</string>
    <string name="title_activity_maps">Map</string>
    <string name="action_settings">Settings</string>
    <string name="autocomplete_hint">Search a Place</string>
    <string name="title_activity_prueba">Prueba</string>
    <string name="title_activity_gg">gg</string>
    <string-array name="opciones_array">
        <item>Sobre Nosotros</item>
        <item>Términos y Condiciones </item>
        <item>Tutorial</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="tab_detalleCochera">Detalle Cochera</string>
    <string name="tab_detalleServicios">Detalle Servicios</string>
    <string name="nameCochera_prueba">Los Jardines</string>
    <string name="capacidad_cochera_prueba">ESPACIO(S) TOMADO(S) DE</string>
    <string name="cuposDisponibleTest">25</string>
    <string name="direccion_cocheraTest">Av. Canadá 4071, San Luis</string>
    <string name="telefono_cocheraTest">997595078</string>
    <string name="email_cocheraTest">los.jardines@gmail.com</string>
    <string name="nameServicio_CocheraTest">Lavado de Vehiculo</string>
    <string name="precioServicio_CocheraTest">S/.15.00</string>
    <string name="soles">S/.</string>
    <string name="precioxHora">x Hora</string>
    <string name="estadoServicio_CocheraTest">abierto</string>
    <string name="quienesSomos">¿Quiénes Somos?</string>
    <string name="text_quienesSomos">EasyParking es una aplicación integral que se apoya de 2 sistemas complementarios más para un buen desempeño de la información de las cocheras disponibles en Lima. EasyParking nace como una iniciativa para resolver el problema de encontrar un estacionamiento en la ciudad de Lima. EasyParking se logra desarrollar gracias a un proyecto de Calidad de Software de la UNMSM y tiene el respaldo de diferentes cocheras disponibles al nivel de Lima.</string>
    <string name="Problem">Problema del Estacionamiento</string>
    <string name="text_problemaParking">Lima es una \"cultura del automóvil\" y Lima Centro es el epicentro. Con su pobre tránsito masivo, el estacionamiento nunca ha sido tan desafiante, lo que ha tenido un impacto negativo en la vida económica, ambiental y social de esta metrópolis. Comenzamos abordando las necesidades urgentes de estacionamiento de Lima, y pronto nos expandiremos a otros distritos como: San Miguel, Callao y a docenas de otras distritos.</string>
    <string name="text_problemaParking2">A pesar de las incursiones de Uber y el lejano sueño de los autos sin conductor, hoy el conductor típico se enfrenta a un entorno de estacionamiento difícil que no va a desaparecer pronto. Esto es causado por la dependencia del gobierno de la ciudad en los ingresos generados por la gestión de espacios de estacionamiento y violaciones de estacionamiento. Además, los habitantes de la ciudad y los visitantes desprevenidos se ven obligados a navegar por un sistema de señalización confuso que puede incluir no menos de 7 publicaciones separadas con respecto a la disponibilidad de estacionamiento en una calle en particular.</string>
    <string name="version">Versión 1.0</string>
    <string name="develop">Desarrollado por:</string>
    <string name="text_develop">Alumnos de la UNMSM</string>
    <string name="email_contacto">easyParking@parking.com</string>
    <string name="condicionesUso">EasyParking Condiciones de Uso</string>
    <string name="text_condiciones">LEA ATENTAMENTE LO SIGUIENTE ANTES DE ACEPTAR ESTOS TÉRMINOS  PARA ACCEDER Y / O UTILIZAR EL SERVICIO (DEFINIDO A CONTINUACIÓN).</string>
    <string name="text_condiciones2">Al hacer clic en el botón \"Aceptar\", o acceder y usar el Servicio (definido más abajo), usted reconoce y representa que:</string>
    <string name="text_condiciones3">a. Tiene más de 18 años y tiene la capacidad legal para ingresar estos Términos (definidos a continuación).</string>
    <string name="text_condiciones4">b. Usted, en su propio nombre como individuo y en nombre de su empleador u otra entidad legal (colectivamente \"usted\" o \"su\"), ha leído y entendido y acepta que estos Términos de uso (\"Términos\") rigen sus derechos y obligaciones con respecto al uso de la Aplicación de EasyParking (\"Aplicación\") y el Sitio (todos de los cuales se conocen colectivamente como el \"Servicio\").</string>
    <string name="text_condiciones5">ANTES DE ACEPTAR ESTOS TÉRMINOS, REVISE CUIDADOSAMENTE LA SECCIÓN 4 DE ESTOS TÉRMINOS, QUE RECHAZAN LAS GARANTÍAS Y LIMITAN LA RESPONSABILIDAD DE EASYPARKING PARA CON USTED.</string>
    <string name="text_acuerdos1">1. ACUERDO CON LOS TÉRMINOS Y LA POLÍTICA DE PRIVACIDAD. Usted comprende y acepta que al marcar la casilla y hacer clic en Acepto y / o acceder y continuar utilizando el Servicio.</string>
    <string name="text_acuerdos2">2. EL SERVICIO. El Servicio está destinado a brindar a los usuarios información sobre el estacionamiento y ayudarlos en su búsqueda de estacionamiento. Si bien el Servicio aspira a ser útil, no está destinado a garantizar la disponibilidad del estacionamiento ni a confiar en situaciones en las que la señalización u otros indicadores estipulen lo contrario.</string>
    <string name="text_title_acuerdos3">3. PROPIEDAD INTELECTUAL</string>
    <string name="text_condiciones3_1">a. Todos los derechos de propiedad intelectual (\"IP\") en el Servicio, incluidos los derechos de autor, marcas comerciales, diseños industriales, patentes, secretos comerciales, incluidos los datos relacionados con su uso de los mismos y cualquier otra IP de EASYPARKING, y cualquier derecho allí no explícitamente otorgado por estos Los términos están reservados y serán exclusiva y exclusivamente de propiedad de EASYPARKING o sus terceros licenciantes.</string>
    <string name="text_condiciones3_2">b. El logotipo de EasyParking y / o de servicio son propiedad de EasyParking y, en la medida permitida por la ley, no se pueden usar de ninguna manera no expresamente permitida por estos Términos a menos que se reciba el consentimiento expreso por escrito de EASYPARKING.</string>
    <string name="text_acuerdos4">4. DESCARGO DE RESPONSABILIDAD DE GARANTÍAS</string>
    <string name="text_condiciones4_1">a. USTED ENTIENDE EXPRESAMENTE QUE SU USO DEL SERVICIO Y EL CONTENIDO ES BAJO SU PROPIO RIESGO Y QUE EL SERVICIO Y EL CONTENIDO SE PROPORCIONAN \"TAL CUAL\" Y \"TAL COMO ESTÁN DISPONIBLES\".</string>
    <string name="text_condiciones4_2">b. ADEMÁS, Y SIN DEROGAR NINGUNA OTRA EXENCIÓN DE RESPONSABILIDAD EN ESTOS TÉRMINOS, POLIS RENUNCIA A CUALQUIER GARANTÍA PARA LA EXACTITUD DE LOS MAPAS, LAS CONDICIONES DEL CAMINO O LAS TARIFAS DE APARCAMIENTO PRESENTADAS EN O POR EL SERVICIO.</string>

    <!--by miguel-->
    <string name="button_search_name">Buscar</string>

    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">SIGUIENTE</string>
    <string name="skip">SALTAR INTRO</string>
    <string name="start">LO ENTIENDO!</string>

    <string name="slide_1_title">Busca Cocheras rápidamente!</string>
    <string name="slide_1_desc">Encuentra todas las cocheras disponibles a 3 Km de tu posición</string>

    <string name="slide_2_title">Significado del Color de la Cochera</string>
    <string name="slide_2_desc">Las cochera de color verde son las que están libres mientras que las de color rojo significa que esta ocupada</string>

    <string name="slide_3_title">Busca las cocheras por Ublicación</string>
    <string name="slide_3_desc">Puedes buscar las cocheras más cerca ingresando una Ubicación</string>

    <string name="slide_4_title">Ahorra dinero</string>
    <string name="slide_4_desc">Ahorra dinero y encuentra la cocheras más cerca a donde quieres</string>

    <string name="play_again_desc">Este boton inicia el walkthrough denuevo </string>
    <string name="play_again">Walkthrough</string>
    <string name="walkthrough">¿Quiéres ver el tutorial otra vez ? Mira los beneficios que tiene nuestra aplicación. Solo tienes que presionar en la imagen y mira otra vez el tutorial.</string>
    <string name="informacion">Los Jardines es la cochera ideal para el coche , brinda al cliente la conformidad y seguridad del estacionamiento.</string>
</resources>
