<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:fitsSystemWindows="true"
tools:context="com.robpercival.maplocationdemo.Activity.TerminosCondiciones">
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="@dimen/activity_vertical_margin">
            <TextView
                android:id="@+id/condicionesUso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textsize_nameCochera"
                android:text="@string/condicionesUso"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_padding"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">
                <TextView
                    android:id="@+id/txt_condiciones1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textsize_capacidad_cochera"
                    android:text="@string/text_condiciones" />
                <TextView
                    android:id="@+id/txt_condiciones2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textsize_capacidad_cochera"
                    android:text="@string/text_condiciones2" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/activity_horizontal_margin"
                    android:paddingLeft="@dimen/activity_horizontal_marginSubtitle">
                    <TextView
                        android:id="@+id/txt_condiciones3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/textsize_capacidad_cochera"
                        android:text="@string/text_condiciones3" />
                    <TextView
                        android:id="@+id/txt_condiciones4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/textsize_capacidad_cochera"
                        android:paddingBottom="@dimen/activity_vertical_padding"
                        android:text="@string/text_condiciones4" />
                </LinearLayout>
                <TextView
                    android:id="@+id/txt_condiciones5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="@dimen/textsize_capacidad_cochera"
                    android:text="@string/text_condiciones5" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/activity_horizontal_margin"
                    android:paddingLeft="@dimen/activity_horizontal_marginSubtitle">
                    <TextView
                        android:id="@+id/txt_acuerdos1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/textsize_capacidad_cochera"
                        android:text="@string/text_acuerdos1"
                        android:paddingBottom="@dimen/padding_acuerdo"
                        />
                    <TextView
                        android:id="@+id/txt_acuerdos2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/textsize_capacidad_cochera"
                        android:text="@string/text_acuerdos2"
                        android:paddingBottom="@dimen/padding_acuerdo"/>
                    <TextView
                        android:id="@+id/txt_title_acuerdos3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/textsize_capacidad_cochera"
                        android:text="@string/text_title_acuerdos3" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingLeft="@dimen/activity_horizontal_marginSubtitle">
                        <TextView
                            android:id="@+id/txt_condiciones3_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/textsize_capacidad_cochera"
                            android:text="@string/text_condiciones3_1"
                            android:paddingBottom="@dimen/padding_acuerdo"/>
                        <TextView
                            android:id="@+id/txt_condiciones3_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/textsize_capacidad_cochera"
                            android:paddingBottom="@dimen/padding_acuerdo"
                            android:text="@string/text_condiciones3_2" />
                    </LinearLayout>
                    <TextView
                        android:id="@+id/title_acuerdos4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/textsize_capacidad_cochera"
                        android:text="@string/text_acuerdos4"
                        android:paddingBottom="@dimen/padding_acuerdo"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingLeft="@dimen/activity_horizontal_marginSubtitle">
                        <TextView
                            android:id="@+id/txt_condiciones4_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/textsize_capacidad_cochera"
                            android:text="@string/text_condiciones4_1"
                            android:paddingBottom="@dimen/padding_acuerdo"/>
                        <TextView
                            android:id="@+id/txt_condiciones4_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/textsize_capacidad_cochera"
                            android:text="@string/text_condiciones4_2" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>