<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:id="@+id/prictureCard"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_cardview"
    cardview:cardCornerRadius="@dimen/cornerradius_cardview"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    >
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true">
        <ImageView
            android:id="@+id/pictureCard"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_cardview"
            android:background="@drawable/lavado"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:background="@color/backgroundtext_card"
            >

            <TextView
                android:id="@+id/nameServicio_Cochera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nameServicio_CocheraTest"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textsize_nameServicio_Cochera"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/precioServicio_Cochera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/precioServicio_CocheraTest"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/textsize_nameServicio_Cochera"
                    />
                <TextView
                    android:id="@+id/precioXhora"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/precioxHora"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/textsize_nameServicio_Cochera"
                    />
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:id="@+id/estadoServicio_Cochera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/estadoServicio_CocheraTest"
            android:textColor="@android:color/white"
            android:textSize="@dimen/textsize_nameServicio_Cochera" />
    </FrameLayout>
</android.support.v7.widget.CardView>